--- a/chameleon/src/main/resources/templates/theme_element_provide_method_template.vm
+++ b/chameleon/src/main/resources/templates/theme_element_provide_method_template.vm
@@ -1,3 +1,7 @@
+/**
+$javaDocInfo
+ * @return
+ */
 public android.databinding.ObservableInt $themeElementProvideMethod() {
     return themeElementObservableIntMap.get("$themeElementProvideKey");
 }
