Migrate from ObservableInt to LiveData<Integer>

--- a/chameleon/src/main/resources/templates/theme_element_provide_method_template.vm
+++ b/chameleon/src/main/resources/templates/theme_element_provide_method_template.vm
@@ -2,6 +2,6 @@
 $javaDocInfo
  * @return
  */
-public android.databinding.ObservableInt $themeElementProvideMethod() {
-    return themeElementObservableIntMap.get("$themeElementProvideKey");
+public androidx.lifecycle.MutableLiveData<Integer> $themeElementProvideMethod() {
+    return themeElementLiveDataMap.get("$themeElementProvideKey");
 }
