--- a/chameleon/src/main/resources/templates/theme_element_provider_initializer_template.vm
+++ b/chameleon/src/main/resources/templates/theme_element_provider_initializer_template.vm
@@ -1,6 +1,1 @@
-themeElementObservableIntMap.put("$themeElementProviderKey", new android.databinding.ObservableInt() {
-    @Override
-    public int get() {
-        return getIdentifier("$themeElementProviderKey");
-    }
-});
+themeElementLiveDataMap.put("$themeElementProviderKey", new androidx.lifecycle.MutableLiveData<>());
