Return LiveData instead of MutableLiveData

--- a/chameleon/src/main/resources/templates/theme_element_provide_method_template.vm
+++ b/chameleon/src/main/resources/templates/theme_element_provide_method_template.vm
@@ -2,6 +2,6 @@
 $javaDocInfo
  * @return
  */
-public androidx.lifecycle.MutableLiveData<Integer> $themeElementProvideMethod() {
+public androidx.lifecycle.LiveData<Integer> $themeElementProvideMethod() {
     return themeElementLiveDataMap.get("$themeElementProvideKey");
 }
